--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Portifólio</title>
+    <title>My Links</title>
   </head>
   <body>
     <div id="container">
@@ -24,37 +24,44 @@
       </div>
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
-        </li>
-
-        <li>
-          <a href="#">Baixar meu e-book</a>
+          <a
+            href="https://www.youtube.com/channel/UC2XNCfF7rJqP9uJYYl03ulQ"
+            target="_blank"
+            ><ion-icon name="logo-youtube"></ion-icon>Xablau_AM</a>
         </li>
 
         <li>
           <a href="https://github.com/DennysRabeloJr" target="_blank"
-            >Ver meu Portifólio</a
-          >
+            ><ion-icon name="logo-github"></ion-icon> Ver meu Portifólio</a>
         </li>
 
         <li>
-          <a href="#">Aleatório</a>
+          <a
+            href="https://www.linkedin.com/in/dennys-rabelo-9b4537271/"
+            target="_blank"
+            ><ion-icon name="logo-linkedin"></ion-icon> Linkedin</a>
+        </li>
+
+        <li>
+          <a href="https://bit.ly/3SVYD7y" target="_blank"
+            ><ion-icon name="globe-outline"></ion-icon>Procurando Arquiteta?</a>
         </li>
       </ul>
+      
+      <!-- Ícones links -->
       <div id="social-links">
         <a
           href="https://steamcommunity.com/profiles/76561198891689884/"
-          target="_blank"
-        >
+          target="_blank">
           <ion-icon name="logo-steam"></ion-icon>
         </a>
-        <a href="https://www.instagram.com/dennysjr8/">
+        <a href="https://www.instagram.com/dennysjr8/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="www.linkedin.com/in/dennys-rabelo-9b4537271">
-          <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://discord.gg/J54jjEnW" target="_blank">
+          <ion-icon name="logo-discord"></ion-icon>
         </a>
-        <a href="https://www.twitch.tv/xablau_am">
+        <a href="https://www.twitch.tv/xablau_am" target="_blank">
           <ion-icon name="logo-twitch"></ion-icon>
         </a>
       </div>
@@ -64,12 +71,12 @@
     </div>
     <script
       type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
+    </script>
     <script
       nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js">
+    </script>
     <script src="./js/script.js"></script>
   </body>
 </html>
