--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en, pt-br" class="light">
+<html lang="en, pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,8 +24,7 @@
       </div>
       <ul>
         <li>
-          <a
-            href="https://www.youtube.com/channel/UC2XNCfF7rJqP9uJYYl03ulQ"
+          <a href="https://www.youtube.com/channel/UC2XNCfF7rJqP9uJYYl03ulQ"
             target="_blank"
             ><ion-icon name="logo-youtube"></ion-icon>Xablau_AM</a>
         </li>
@@ -36,8 +35,7 @@
         </li>
 
         <li>
-          <a
-            href="https://www.linkedin.com/in/dennys-rabelo-9b4537271/"
+          <a href="https://www.linkedin.com/in/dennys-rabelo-9b4537271/"
             target="_blank"
             ><ion-icon name="logo-linkedin"></ion-icon> Linkedin</a>
         </li>
