--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="./assets/codigo-html.png" type="image/x-icon">
-    <title>My Links</title>
+    <title>Central de Links</title>
   </head>
   <body>
     <div id="container">
